<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Apprenons Français</string>
    <string name="action_settings">Settings</string>

    <!-- NEW PHRASE FORM -->
    <string name="done_button">Add</string>
    <!-- text box hints -->
    <string name="new_phrase_hint">French word or phrase</string>
    <string name="translation_hint">Translations (separated by ,)</string>
    <string name="translation_not_saved">There was a problem saving the translation.</string>
    <string name="phrase_not_given">You must enter a french word or phrase.</string>
    <string name="translation_not_given">You must enter one or more translations, separated by commas.</string>
    <!-- phrase type -->
    <string name="radio_noun">Noun</string>
    <string name="radio_verb">Verb</string>
    <string name="radio_adjective">Adjective</string>
    <string name="radio_adverb">Adverb</string>
    <!-- noun options -->
    <string name="noun_options">Noun options</string>
    <string name="masculine">Masculine</string>
    <string name="feminine">Feminine</string>
    <string name="proper">Proper noun</string>
    <string name="pluriel">Plural</string>
    <!-- verb options -->
    <string name="verb_options">Verb options</string>
    <string name="radio_transitive">Transitive</string>
    <string name="radio_intransitive">Intransitive</string>
    <string name="radio_either">Both</string>
    <string name="pronominal">Reflexive</string>
    <string name="irregular">Irregular</string>
    <!-- adjective options -->
    <string name="adjective_options">Adjective Options</string>
    <string name="feminine_hint">Feminine form</string>
    <string name="plural_hint">Plural form</string>
    <string name="feminine_plural_hint">Feminine plural</string>
    <!-- tags list -->
    <string name="tags_title">Tags:</string>
    <string name="new_tag_hint">Add a new tag&#8230;</string>
    <string name="tag_not_saved">There was a problem saving the tag.</string>
    <string name="tag_confirm_delete_title">Delete Tag</string>
    <string name="tag_confirm_delete_message">"Are you sure you want to delete the tag '%s'?"</string>
    <string name="tag_confirm_delete_ok">Delete it</string>
    <string name="tag_confirm_delete_cancel">Never mind</string>

    <!-- Translation list -->
    <string name="title_activity_translations_list">Translations List</string>
    <string name="add_translation">Add new translations&#8230;</string>

    <!-- New quiz -->
    <string name="choose_tags">Quiz topic(s):</string>
    <string name="text_question_count">Questions:</string>
    <string name="show_question_count">The number of questions that will be asked</string>
    <string name="start_quiz">Start quiz!</string>
    <string name="new_quiz">New Quiz</string>
    <string name="all_topics">Everything</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="no_tags_checked">You must select at least one tag to be tested on</string>

    <!-- The quiz itself -->
    <string name="quiz_progress">How far through the quiz you are</string>
    <string name="quiz_final_score">You got %1$d out of %2$d correct.</string>
    <string name="text_answer_english">In English</string>
    <string name="text_answer_french">In French</string>
    <string name="hint_correct_answer">This is the correct answer</string>
    <string name="answer_in_french">The answer should be given in French</string>
    <string name="answer_in_english">The answer should be given in English</string>
    <string name="question_in_engish">The question is in English</string>
    <string name="question_in_french">The question is in French</string>
    <string name="answer_question">Go!</string>
    <string name="next_question">OK</string>
    <string name="exit_quiz">Done</string>
    <string name="correct_answer_given">Correct!</string>
    <string name="incorrect_answer_given">This answer is incorrect.</string>
    
    <!-- Backing up the database -->
    <string name="backup_database">Back up data</string>
    <string name="backup_failed">There was a problem creating a backup</string>
    <string name="backup_complete">Backup saved successfully</string>
    <string name="backup_notification_title">Backing up translations</string>
    <string name="backup_notification_text_creating">Creating the backup&#8230;</string>
    <string name="backup_notification_text_sending">Sending data to backup server&#8230;</string>

</resources>