<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuizActivity" >

    <TextView
        android:id="@+id/textQuizProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/quiz_progress"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textIsSelectable="false" />

    <ProgressBar
        android:id="@+id/progressQuiz"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textQuizProgress" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textQuizProgress"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/editAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textQuestion"
        android:ems="10"
        android:hint="@string/text_answer_english" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editAnswer"
        android:contentDescription="@string/hint_correct_answer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textIsSelectable="true" />

</RelativeLayout>